syntax = "proto3";

package xbasissvc.internal.authentication;

import "konekko.me/xbasis/commons/dto/commons.proto";

service Auth {

    //response authorize data save to context
    rpc Verify (VerifyRequest) returns (VerifyResponse);

}

message VerifyRequest {
    string token = 1;
    string clientId = 2;
    repeated string functionRoles = 3;
    int64 access = 4;
    bool share = 5;
    string functionId = 6;
    string appId = 7;
}

message VerifyResponse {
    string userId = 1;
    string clientId = 2;
    int64 clientPlatform = 3;
    xbasis.commons.dto.State state = 4;
    string appId = 5;
    string relation = 6;
    int64 appType = 7;
}